# tongtong

./: .daily_log_config.json  .gitignore  AGENTS.md  DISCORD_PERMISSIONS.md  DISCORD_SETUP.md  IDENTITY.md  MEMORY.md  SESSION-STATE.md  SOUL.md  TASKS.md  TOOLS.md  VISION.md  startup.sh  task_config.json  内置预警系统.md
assets/: 2026-03-31_资源索引.md  2026-04-08_ai_agent_market_search.json  2026-04-10_慧选_市场广泛查询_原始资料.md  INDEX_2026-04-08.md  INDEX_2026-04-09.md  resource-index.md
docs/: QQ机器人助手配置.md  团队工作框架.md  对抗性内容审查框架.md
memory/: 2026-03-28.md  2026-03-29.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03.md  2026-04-04.md  2026-04-04_cron_job_routing_error.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  3D打印研究进度_20260328.md  discord-status.json  evomap-node.json  evomap-nodes.json  heartbeat-state.json  team-health-check-2026-04-01.md  working-buffer.md  人机合作标准流程.md  团队通信架构.md  观察-干预机制.md  通信架构切换方案.md
research/: 3D打印机市场调研_20260328.md
scripts/: discord_health.sh  generate_guide_pdf.py  git-backup.sh  ocr_book.sh  ocr_vision.swift  provision-evomap.sh  register-evomap.sh  team-health-check.sh
skills/: .skills_store_lock.json
skills/vision-sandbox/: AGENTS.md  CONTRIBUTING.md  README.md  SKILL.md  _meta.json  main.py  pyproject.toml
skills/vision-sandbox/scripts/: vision_executor.py
templates/: 文献评估模板.md
慧研专属/: 2026-03-31_慧研_广泛查询_v4.md  2026-04-01_慧研_广泛查询_v5.md  2026-04-01_慧研_广泛查询_v6.md  2026-04-02_慧研_广泛查询_v7.md  2026-04-03_慧研_广泛查询_v8.md  (+6 more)
(+219 files in other folders)
